# fatrop-research

./: LICENSE  articles.md
fatrop_implicit/research/: CMakeLists.txt  HETEROGENEOUS_PHASE_PARAMETERS.md  INTERVAL_SCOPED_RICCATI.md  NONLINEAR_GLOBAL_PARAMETER_SQP.md  PARAMETRIC_RICCATI.md  RANK_DEFICIENT_IMPLICIT.md  README.md  RESULTS.md  ROCKETSYSTEM_REPLACEMENT_READINESS.md  cutest_ipopt_benchmark.cpp  cutest_probe.cpp  dtoc_fatrop_benchmark.cpp  global_parameter_kkt_benchmark.cpp  heterogeneous_phase_kkt_benchmark.cpp  interval_scoped_collocation_problem.cpp  interval_scoped_collocation_problem.hpp  interval_scoped_kkt_benchmark.cpp  interval_scoped_ocp_benchmark.cpp  nonlinear_global_parameter_sqp_benchmark.cpp  nonlinear_interval_scoped_sqp_benchmark.cpp  parametric_riccati_reference.cpp  rank_deficient_implicit_kkt_benchmark.cpp  run_heterogeneous_phase_sweep.sh  run_interval_scoped_ocp_sweep.sh  run_interval_scoped_sweep.sh  run_multiphase_sweep.sh  run_nonlinear_interval_scoped_sweep.sh  run_nonlinear_sqp_sweep.sh  run_preliminary_benchmarks.sh  run_rank_deficient_implicit_sweep.sh
fatrop_implicit/src/: CMakeLists.txt
fatrop_implicit/src/ip_algorithm/: ip_mu_update.cpp
fatrop_implicit/src/linear_algebra/: lu_factorization.cpp
fatrop_implicit/src/ocp/: aug_system_solver.cpp  dims.cpp  hessian.cpp  interval_scoped_kkt_solver.cpp  ip_alg_builder.cpp  ip_algorithm.cpp  ip_convergence_check.cpp  ip_convergence_check_resto.cpp  ip_data.cpp  ip_eq_mult_initializer.cpp  ip_initializer.cpp  ip_initializer_resto.cpp  ip_iterate.cpp  ip_iteration_output.cpp  ip_iteration_output_resto.cpp  ip_linesearch.cpp  ip_nlp_orig.cpp  ip_nlp_resto.cpp  ip_resto_phase_min_cl1.cpp  ip_search_dir.cpp  jacobian.cpp  nlp_ocp.cpp  parametric_implicit_nlp_ocp.cpp  pd_solver_orig.cpp  pd_solver_resto.cpp  pd_system_orig.cpp  pd_system_resto.cpp  problem_info.cpp
fatrop_implicit/unittest/: CMakeLists.txt  random_matrix.hpp
fatrop_implicit/unittest/implicit/: flop_counter.py  general_implicit_benchmark.cpp  general_implicit_benchmark_postprocess.py  general_implicit_benchmark_standalone.cpp  general_implicit_test.cpp  general_lu_accelerated_test.cpp  generate_visualization_files.cpp  implicit_ocp_test.cpp  post_process_settings.json  test_jacobian_decomposition.cpp  test_lu_fact_complexity.cpp  test_lu_fact_complexity_postprocess.py  visualize_test_jacobian_decomposition.py
fatrop_implicit/unittest/implicit/benchmark_postprocess/: __init__.py  filter.py  flop_data_generator.py  helper.py  main.py  main_flops.py  metric_computer.py  plot_preparator.py  visualizer.py
fatrop_implicit/unittest/implicit/generators/: batch_reactor_generator.hpp  batch_reactor_minimal_example.cpp  bycicle_generator.hpp  example_static_generator.hpp  holonomic_generator.hpp  manipulator_path_follower_generator.hpp  n_link_planar_robot.hpp  ocp_interface_generator.hpp  quadruped_generator.hpp  quadruped_helper.cpp  quadruped_helper.hpp  show_interface_output.hpp  solar_receiver_reactor_generator.hpp  truck_trailer_generator.hpp
fatrop_implicit/unittest/implicit/manipulator_path_follower/: mamipulator_path_follower_post_process.py  manipulator_path_follower.py  manipulator_path_follower_beam.py  manipulator_path_follower_contact.py  manipulator_path_follower_torque.py  visualize_optimal_trajectory.py  visualize_optimal_trajectory_helper.py  visualize_panda.py  visualize_robot_beam.py
fatrop_implicit/unittest/implicit/pendulum_3d/: config.yaml  main.py  (+5 more)
fatrop_implicit/unittest/ip_algorithm/: ip_initializer_test.cpp
fatrop_implicit/unittest/linear_algebra/: blasfeo_test.cpp  blasfeo_valgrind_test.cpp  lu_factorization_test.cpp
fatrop_implicit/unittest/ocp/: aug_system_solver_test.cpp  global_parameter_kkt_solver_test.cpp  interval_scoped_kkt_solver_test.cpp  interval_scoped_ocp_kkt_solver_test.cpp  interval_scoped_pd_solver_test.cpp  ip_search_dir_resto_test.cpp  ip_search_dir_test.cpp  jacobian_hessian_test.cpp  native_multiphase_dimension_sweep_test.cpp  nlp_ocp_test.cpp  ocp_ip_data_solve_test.cpp  ocp_test_probem.hpp  parametric_implicit_nlp_ocp_test.cpp  parametric_implicit_solve_test.cpp  pd_resto_solver_test.cpp  pd_system_solver_test.cpp  phase_arrow_kkt_solver_test.cpp  phase_arrow_ocp_kkt_solver_test.cpp  phase_arrow_pd_solver_test.cpp  problem_info_test.cpp  test_J_structure.py  test_computation_time_scaling.py  visualize.py  visualize7dof.py  visualize_KKT_structures.py
fatrop_implicit/unittest/reformulation/: post_process_block_LU_scaling.py  test_block_LU_scaling.cpp  test_degenerate_case.py  test_sparse_lu.cpp
moto/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  plans.md  readme.md  run_gdb.py
moto/benchmark/: benchmark_tool.py  go2_test.py  ur5_test.py
moto/bindings/: CMakeLists.txt  binding_fwd.hpp  enum_export.hpp  package_init.py  setup_bindings.cpp  type_cast.hpp
moto/bindings/definition/: fields.cpp  functional.cpp  multibody.cpp  node_data.cpp  ns_sqp.cpp  public_api.py  sqp.py  var.py
moto/cmake/: _Config.cmake.in  depHelpers.cmake  docHelpers.cmake  installHelpers.cmake  subObjectHelpers.cmake
moto/docs/: normal_iteration.md  normal_vs_restoration.md  restoration.md
moto/example/: CMakeLists.txt
moto/example/arm/: run.py
moto/example/quadruped/: mpc.py  quaternion_test.py  run.py
moto/example/toy/: box_api_demo.py  run.py
moto/moto/: __init__.py  _bootstrap.py
moto/src/core/: expr.cpp  external_function.cpp
moto/src/multibody/: pinocchio_utils.cpp  quaternion.cpp
moto/src/ocp/: constr.cpp  cost.cpp  dynamics.cpp  func_data.cpp  func_impl.cpp  graph_model.cpp  ineq_constr.cpp  ineq_soft_constr.cpp  merit_data.cpp  node_data.cpp  problem.cpp  shared_data.cpp  sym_impl.cpp
moto/src/solver/: data_base.cpp  ineq_soft_impl.cpp  ineq_soft_reflect.cpp
moto/src/spmm/: spmm.cpp  spmm_unary_op.cpp
moto/src/utils/: codegen.cpp  field_conversion.cpp  md5.cpp  timed_block.cpp
moto/unittests/: CMakeLists.txt  blasfeo_factor.cpp  equality_multiplier_init.cpp  graph_model_compose.cpp  ineq_jac_sparsity.cpp  restoration.cpp  spmm.cpp  sym_test.cpp
(+300 files in other folders)
