file(GLOB BINDING_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(SUBDIR ${BINDING_SUBDIRS})
  if(IS_DIRECTORY ${SUBDIR})
    message(STATUS "Adding example: ${SUBDIR}")
    if(EXISTS "${SUBDIR}/CMakeLists.txt")
      add_subdirectory(${SUBDIR})
    endif()
    list(APPEND SUBDIRS ${SUBDIR})
  endif()
endforeach()