find_package(Catch2 3 QUIET)
if(Catch2_FOUND)
    message(STATUS "Packaged version of Catch will be used.")
else()
    message(STATUS "Bundled version of Catch will be downloaded and used.")
    include(FetchContent)
    FetchContent_Declare(
        Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG 53d0d913a422d356b23dd927547febdf69ee9081 # v3.5.0
    )
    FetchContent_MakeAvailable(Catch2)
endif()

find_package(Python 3.8 COMPONENTS Interpreter REQUIRED)

function(add_moto_test name)
    set(test_name ${name}_test)
    set(test_file ${name}.cpp)

    add_executable(${test_name} ${test_file})
    target_include_directories(${test_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(${test_name} PRIVATE moto)
    target_link_libraries(${test_name} PRIVATE Catch2::Catch2WithMain)
    set_target_properties(${test_name} PROPERTIES
        BUILD_RPATH "\$ORIGIN/.."
    )

    # set_source_files_properties(${test_file} PROPERTIES
    #     COMPILE_OPTIONS "$<$<CONFIG:Debug>:-O3>"
    #     COMPILE_DEFINITIONS "$<$<CONFIG:Debug>:NDEBUG>"
    # )
    
    add_test(NAME ${test_name} COMMAND ${test_name} ${ARGN} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    set_tests_properties(
        ${test_name}
        PROPERTIES
        ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}"
    )
endfunction()

function(add_moto_python_test name script)
    add_test(
        NAME ${name}
        COMMAND ${Python_EXECUTABLE} ${script}
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    )
    set_tests_properties(
        ${name}
        PROPERTIES
        ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$ENV{LD_LIBRARY_PATH};OMP_NUM_THREADS=1"
    )
endfunction()


add_moto_test(sym_test)
add_moto_test(ineq_jac_sparsity)
add_moto_test(equality_multiplier_init)
add_moto_test(restoration)
add_moto_test(spmm --rng-seed 1)

add_executable(graph_model_compose_test graph_model_compose.cpp)
target_include_directories(graph_model_compose_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(graph_model_compose_test PRIVATE moto Catch2::Catch2WithMain)
set_target_properties(graph_model_compose_test PROPERTIES
    BUILD_RPATH "\$ORIGIN/.."
)

foreach(graph_shard IN ITEMS mapping remap path mutation validation concurrency)
    add_test(
        NAME graph_model_compose_${graph_shard}_test
        COMMAND graph_model_compose_test "[graph][${graph_shard}]"
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    )
    set_tests_properties(
        graph_model_compose_${graph_shard}_test
        PROPERTIES
        ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}"
    )
endforeach()
